--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Trans">
         <activity
+            android:name=".Test"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="false" />
         <!--
